--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  color: greenyellow;
+  color: wheat;
   line-height: 1.6;
   min-height: 100vh;
 }
@@ -217,3 +217,4 @@ footer {
   width: 100%;
   height: auto;
 }
+
