--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  color: wheat;
+  color: blue-violet;
   line-height: 1.6;
   min-height: 100vh;
 }
@@ -218,5 +218,6 @@ footer {
   width: 100%;
   height: auto;
 }
+
 
 
