--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  color: blue-violet;
+  color: blue-light;
   line-height: 1.6;
   min-height: 100vh;
 }
@@ -22,7 +22,7 @@ header {
 }
 
 header h2 {
-  color: black;
+  color: blue-light;
 }
 
 header .tagline {
@@ -218,6 +218,7 @@ footer {
   width: 100%;
   height: auto;
 }
+
 
 
 
