--- a/style.css
+++ b/style.css
@@ -78,7 +78,8 @@ nav a.active {
 
 .hero p {
   text-align: center;
-  margin: 50px;
+  margin: 100px;
+  font-size: 14px;
 }
 
 /* Carousel */
@@ -218,6 +219,7 @@ footer {
   width: 100%;
   height: auto;
 }
+
 
 
 
