--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ p {
   text-align: center;
   margin: 100px;
   font-size: 14px;
+  color: blue-violet;
 }
 
 /* Carousel */
@@ -219,6 +220,7 @@ footer {
   width: 100%;
   height: auto;
 }
+
 
 
 
