--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   color: blue-light;
   line-height: 1.6;
   min-height: 100vh;
+   color: #D87093;
 }
 
 
@@ -220,6 +221,7 @@ footer {
   width: 100%;
   height: auto;
 }
+
 
 
 
